--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsnd --respawn index.ts"
+    "start": "tsnd --respawn index.ts",
+    "db": "tsnd --respawn dao/config.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +18,9 @@
     "i": "^0.3.7",
     "npm": "^9.2.0",
     "ts-node-dev": "^2.0.0"
+  },
+  "dependencies": {
+    "@types/pg": "^8.6.6",
+    "pg": "^8.8.0"
   }
 }
