--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/pg": "^8.6.6",
+    "bcrypt": "^5.1.0",
     "pg": "^8.8.0"
   }
 }
