--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsnd --respawn index.ts",
-    "db": "tsnd --respawn dao/config.ts"
+    "db": "tsnd --respawn dao/config.ts",
+    "format": "prettier --write **/*.ts",
+    "lint": "eslint **/*.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "cors": "^2.8.5",
+    "eslint": "^8.32.0",
     "express": "^4.18.2",
     "i": "^0.3.7",
     "npm": "^9.2.0",
@@ -25,6 +30,7 @@
     "@types/validator": "^13.7.10",
     "bcrypt": "^5.1.0",
     "pg": "^8.8.0",
+    "prettier": "^2.8.3",
     "validator": "^13.7.0"
   }
 }
