--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register src/**/*.test.ts",
     "start": "tsnd --respawn index.ts",
     "db": "tsnd --respawn dao/config.ts",
     "format": "prettier --write **/*.ts",
@@ -13,15 +13,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.3.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/mocha": "^10.0.1",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "chai": "^4.3.7",
     "cors": "^2.8.5",
     "eslint": "^8.32.0",
     "express": "^4.18.2",
     "i": "^0.3.7",
+    "mocha": "^10.2.0",
     "npm": "^9.2.0",
+    "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
