--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/mocha": "^10.0.1",
+    "@types/sinon": "^10.0.13",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
@@ -27,6 +28,7 @@
     "i": "^0.3.7",
     "mocha": "^10.2.0",
     "npm": "^9.2.0",
+    "sinon": "^15.0.1",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0"
   },
