--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,10 @@
+
+
 {
     "singleQuote": true,
-    "printWidth": 160
+    "printWidth": 160,
+    "tabWidth": 4,
+    "proseWrap": "never"
 }
+
+
