--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": " mocha -r ts-node/register src/**/*.test.ts",
+    "test:jest": " jest --detectOpenHandles",
     "start": "tsnd --respawn src/index.ts",
     "db": "tsnd --respawn dao/config.ts",
     "format": "prettier --write **/*.ts",
@@ -16,6 +17,7 @@
     "@types/chai": "^4.3.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.4.0",
     "@types/mocha": "^10.0.1",
     "@types/sinon": "^10.0.13",
     "@types/supertest": "^2.0.12",
@@ -26,10 +28,13 @@
     "eslint": "^8.32.0",
     "express": "^4.18.2",
     "i": "^0.3.7",
+    "jest": "^29.4.1",
     "mocha": "^10.2.0",
     "npm": "^9.2.0",
     "sinon": "^15.0.1",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
+    "ts-mock-imports": "^1.3.8",
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
@@ -40,5 +45,18 @@
     "pg": "^8.8.0",
     "prettier": "^2.8.3",
     "validator": "^13.7.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(//.*|(\\.|/)(spec))\\.ts?$",
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json",
+      "node"
+    ]
   }
 }
